# httpserver

./: CMakeLists.txt  Readme.md  main.cc  marketsolution5001.cfg  msg.cfg  run5001.sh
config/: CMakeLists.txt~  main.cc  test.cfg
config/include/: marketsolution_config.h  xconfig.h
config/src/: xconfig.cc
include/: connection.h  define.h  http_request.h  tnode_adapter.h
src/: connection.cc  http_request.cc  marketsolution_config.cc  tnode_adapter.cc
test/: curl.sh  curl.sh~  curl5008.sh  curl_192.168.10.200.sh  curl_35.154.147.154.sh
